# jni-example

./: .gitignore  CMakeLists.txt  README.md  main.cpp
interpreter/: CMakeLists.txt  interpreter.cpp  interpreter.hpp
test/: CMakeLists.txt  main_catch2.cpp  main_objects.cpp
test/java/: CMakeLists.txt  MyTest.java
